--- a/d2382aa96819e2d08256c76d8e30cd204ccc2068/index.html
+++ b/d2382aa96819e2d08256c76d8e30cd204ccc2068/index.html
@@ -166,16 +166,16 @@
                 <div class="modal-body">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
                     </button>
-                    <h3 class="text-center section-padding">Ugh... dress codes?</h3>
-                    <h5>Mehndi <span class="time">1PM - 5PM</span></h5>
+                    <h3 class="text-center section-padding">Gut das du fragst, du hast es nötig</h3>
+                    <h5>Kirche<span class="time">12:00-14:00</span></h5>
                     <p>
-                        <strong>Ethnic indian wear</strong>
+                        <strong>Je unheiliger desto besser</strong>
                         <br>
-                        Ladies can wear something
-                        <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-women/">bright & vivid</a>
-                        and gentlemen can be on
-                        their <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-men/">vibrant
-                        kurtas</a> with pants or pyjamas along with an optional shawl.
+                        Für Frauen z.B. (wenn sogar der Papst es lied):
+                        <a href="https://media.tag24.de/720x480/b/a/baz6iucq3pgpqgy55c65js66wepw4jjz.jpg">bright & vivid</a>
+                        und für Herren
+                        <a href="https://bilder.bild.de/fotos-skaliert/hilfe-was-ist-das-denn-fuer-ein-look-so-meldet-sich-borat-zurueck-man-will-eigentlich-nicht-aber-irgen-201542907-73216364/6,w=993,q=high,c=0.bild.jpg">
+                        </a> einfach zeitlos.
                     </p>
                     <h5>Cocktail Night <span class="time">7PM - 12AM</span></h5>
                     <p>
