--- a/d2382aa96819e2d08256c76d8e30cd204ccc2068/index.html
+++ b/d2382aa96819e2d08256c76d8e30cd204ccc2068/index.html
@@ -172,10 +172,10 @@
                         <strong>Je unheiliger desto besser</strong>
                         <br>
                         Für Frauen z.B. (wenn sogar der Papst es lied):
-                        <a href="https://media.tag24.de/720x480/b/a/baz6iucq3pgpqgy55c65js66wepw4jjz.jpg">bright & vivid</a>
-                        und für Herren
+                        <a href="https://media.tag24.de/720x480/b/a/baz6iucq3pgpqgy55c65js66wepw4jjz.jpg">Einfach klassisch stilvoll.</a>
+                        Und für Herren ist sowas
                         <a href="https://bilder.bild.de/fotos-skaliert/hilfe-was-ist-das-denn-fuer-ein-look-so-meldet-sich-borat-zurueck-man-will-eigentlich-nicht-aber-irgen-201542907-73216364/6,w=993,q=high,c=0.bild.jpg">
-                        </a> einfach zeitlos.
+                        einfach zeitlos.</a> 
                     </p>
                     <h5>Cocktail Night <span class="time">7PM - 12AM</span></h5>
                     <p>
