--- a/indexwork.html
+++ b/indexwork.html
@@ -120,6 +120,79 @@
     </div>
 </section>
 
+<section class="events section-padding" id="intro2">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h3 class="header">Events</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8">
+                    <p><strong>23. April</strong></p>
+
+                    <h5>Kirche in Dorsten <span class="time">12:00 - 15:00</span></h5>
+                    <p>Marias alte Kirche wo sie ihre ganzen Untaten bis heute nicht gebeichtet hat...</p>
+					
+					<p><strong>23. April-24. April</strong></p>
+
+                    <h5>Schwarzkaue <span class="time">16:00 - 05:00</span></h5>
+                    <p>Lets Party!</p>
+            </div>
+			<div class="row section-padding">
+            <div class="col-md-4 col-md-offset-4 text-center">
+                <a class="btn btn-accent btn-small" data-toggle="modal" data-target="#dc-modal">
+                    <i class="fa fa-barcode"></i>&nbsp;&nbsp;Dress code
+                </a>
+            </div>
+        </div>
+    </div>
+	
+	<div id="dc-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
+                    </button>
+                    <h3 class="text-center section-padding">Gut das du fragst, du hast es nötig</h3>
+                    <h5>Kirche<span class="time">12:00-14:00</span></h5>
+                    <p>
+                        <strong>Je unheiliger desto besser</strong>
+                        <br>
+                        Für Frauen z.B. (wenn sogar der Papst es lied):
+                        <a href="https://media.tag24.de/720x480/b/a/baz6iucq3pgpqgy55c65js66wepw4jjz.jpg">Einfach klassisch stilvoll</a>.
+                        Und für Herren ist sowas
+                        <a href="https://bilder.bild.de/fotos-skaliert/hilfe-was-ist-das-denn-fuer-ein-look-so-meldet-sich-borat-zurueck-man-will-eigentlich-nicht-aber-irgen-201542907-73216364/6,w=993,q=high,c=0.bild.jpg">
+                        einfach zeitlos</a>. 
+                    </p>
+                    <h5>Cocktail Night <span class="time">7PM - 12AM</span></h5>
+                    <p>
+                        <strong>Western attire</strong>
+                        <br>
+                        A semi-formal look that is contemporary & fashionable which is not too prim & proper is the best
+                        to pull off this night. You can see some pins for
+                        <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-women/">ladies</a>
+                        & <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-men/">gents</a>.
+                    </p>
+                    <h5>Wedding <span class="time">6PM-12AM</span></h5>
+                    <p>
+                        <strong>Indo-western</strong>
+                        <br>
+                        Ladies can flaunt their unconventional sarees,
+                        <a href="https://www.pinterest.com/ramswarooppatra/indo-western-lehengas/">lehengas</a>,
+                        <a href="https://www.pinterest.com/ramswarooppatra/indo-western-anarkalis/">anarkalis</a>,
+                        dresses and the list
+                        goes on whereas gentlemen can wear any kind of suit or just blazer. If you don't like to wear a
+                        suit/blazer, you can do a <a
+                            href="https://www.pinterest.com/ramswarooppatra/high-neck-jackets-for-men/">high-neck
+                        (band gala) waistcoat & shirt</a> combo.
+                    </p>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+</section>
+
 <section class="events section-padding" id="events">
     <div class="container">
         <div class="row">
