--- a/indexwork.html
+++ b/indexwork.html
@@ -120,7 +120,7 @@
     </div>
 </section>
 
-<section class="events section-padding" id="intro2">
+<section class="events section-padding" id="events">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
