--- a/indexwork.html
+++ b/indexwork.html
@@ -306,7 +306,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <h5>Kath. Kirchengemeinde St. Paulus Hervest</h5>
-                            <p>Burgsdorffstraße 154, 46284 Dorsten, Deutschland</p>
+                            <p>Josefstraße 1A, 46284 Dorsten, Deutschland</p>
                         </div>
                         <div class="col-md-6">
                             <h5>Taxi Albers e.K.</h5>
