--- a/indexwork.html
+++ b/indexwork.html
@@ -95,31 +95,6 @@
     </div>
 </section>
 
-<section id="intro">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <h3 class="header">Wie wir uns kennengelernt haben</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 hidden-sm hidden-xs"><img src="img/mfr.jpg" class="wp1"></div>
-            <div class="col-md-4">
-                <p>
-                    Ich habe Maria im Februar 2010 kennengelernt. Schon damals fand ich ihren Arsch total geil. 
-                    "Hey ich bin Till von Till und Phil" hat sie direkt schwach werden lassen. Da ich ihren Arsch 
-                    immer noch geil finde, werde ich den Hintern nun heiraten und die zugehörige Persönlichkeit ertragen.
-                </p>
-            </div>
-            <div class="col-md-4 hidden-sm hidden-xs"><img src="img/tfr.jpg" class="wp2"></div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/mfr.jpg" class="wp8"></div>
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/tfr.jpg" class="wp9"></div>
-        </div>
-    </div>
-</section>
-
 <section class="events section-padding" id="events">
     <div class="container">
         <div class="row">
@@ -355,46 +330,9 @@
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-envelope"></i><input type="email" name="email" class=""
-                                                                     placeholder="Deine Mail!"
-                                                                     required>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-user"></i><input name="name" class=""
-                                                                 placeholder="Dein Name!"
-                                                                 required>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-users"></i><input type="number" name="extras" class="" min="1"
-                                                                  max="10"
-                                                                  placeholder="Wie viele seid ihr??"
-                                                                  required>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-key"></i><input type="number" name="invite_code" id="invite_code"
-                                                                class="" min="0"
-                                                                placeholder="Einladungs-Code"
-                                                                required>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12" id="alert-wrapper"></div>
-                    </div>
-                    <button class="btn-fill rsvp-btn">
-                        Jop, das bin ich und so viele sind wir!
-                    </button>
+                    <a class="btn btn-fill btn-small"
+                               href="https://pookpash.shinyapps.io/wedding/"><i
+                                    class="fa fa-taxi"></i>&nbsp;&nbsp;Hier klicken um zum Reservierungsformular zu kommen</a>
                 </form>
             </div>
         </div>
