update keine ahnung was

--- a/indexwork.html
+++ b/indexwork.html
@@ -39,29 +39,6 @@
     your browser</a> to improve your experience.</p>
 <![endif]-->
 <section class="hero">
-    <section class="navigation">
-        <header>
-            <div class="header-content">
-                <div class="header-nav">
-                    <nav>
-                        <ul class="primary-nav">
-                            <li><a href="#intro">Wie wir uns kennenlernten</a></li>
-                            <li><a href="#events">Events am Tag</a></li>
-                            <li><a href="#eng-pics">Fotos der Standesamtlichen</a></li>
-                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Drohnenflug</a></li>
-                        </ul>
-                        <ul class="member-actions">
-                            <li><a href="#map" class="login">Location</a></li>
-                            <li><a href="#rsvp" class="btn-white btn-small">Digital Zusagen</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="navicon">
-                    <a class="nav-toggle" href="#"><span></span></a>
-                </div>
-            </div>
-        </header>
-    </section>
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
@@ -73,23 +50,15 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-4 hidden-xs"></div>
-            <div class="col-sm-4 hidden-xs text-center"><a href="#rsvp"
-                                                           class="btn btn-accent btn-large rsvp-btn">RSVP</a></div>
-            <div class="col-sm-4 hidden-xs"></div>
-        </div>
     </div>
-    <div class="down-arrow floating-arrow"><a href="#invitation"><i class="fa fa-angle-down"></i></a></div>
 </section>
 
 <section id="invitation" class="section-padding">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>Wir heiraten</h3>
-                <p>Das Datum ist der 23. April 2022 und wir möchten, dass DU dabei bist!</p>
-                <div class="share-bar"></div>
+                <h3>heute | morgen | für immer</h3>
+                <p>Wir möchten unsere Liebe feiern und freuen uns, diesen besonderen Tag mit Dir zu verbringen.</p>
             </div>
         </div>
     </div>
@@ -98,21 +67,25 @@
 <section class="events section-padding" id="events">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <h3 class="header">Events</h3>
+            <div class="col-md-12 col-md-offset-4">
+                <h3 class="header">Ablauf</h3>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8">
-                    <p><strong>23. April</strong></p>
+            <div class="col-md-8 col-md-offset-4">
+                    <p><strong>23. April 2022</strong></p>
 
-                    <h5>Kirche in Dorsten <span class="time">12:00 - 15:00</span></h5>
-                    <p>Marias alte Kirche wo sie ihre ganzen Untaten bis heute nicht gebeichtet hat...</p>
+                    <h5>Ankunft an der St. Josef Kirche <span class="time">13:45</span></h5>
+					<br>
 					
-					<p><strong>23. April-24. April</strong></p>
-
-                    <h5>Schwarzkaue <span class="time">16:00 - 05:00</span></h5>
-                    <p>Lets Party!</p>
+                    <h5>Kirchliche Trauung <span class="time">14:00</span></h5>
+					<p>Im Anschluss Gruppenfoto vor der Kirche</p>
+                    <h5>Sektempfang in der Schwarzkaue Herten <span class="time">ab 15:15</span></h5>
+                    <p>Stimmung macht die Band Nevermind.<br>
+					Infotainment durch den ehemaligen Bergmann Horst :)</p>
+					<h5>Dinner & Let's Party</h5>
+					<p>Weitere Infos und Zeiten folgen.</p>
+					
             </div>
 			<div class="row section-padding">
             <div class="col-md-4 col-md-offset-4 text-center">
@@ -129,38 +102,16 @@
                 <div class="modal-body">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
                     </button>
-                    <h3 class="text-center section-padding">Gut das du fragst, du hast es nötig</h3>
-                    <h5>Kirche<span class="time">12:00-14:00</span></h5>
+                    <h3 class="text-center section-padding">Gut, dass du fragst. Du hast es nötig ;)</h3>
                     <p>
-                        <strong>Je unheiliger desto besser</strong>
+                        <strong>Dress to impress & Dancing Shoes</strong>
                         <br>
-                        Für Frauen z.B. (wenn sogar der Papst es lied):
-                        <a href="https://media.tag24.de/720x480/b/a/baz6iucq3pgpqgy55c65js66wepw4jjz.jpg">Einfach klassisch stilvoll</a>.
-                        Und für Herren ist sowas
-                        <a href="https://bilder.bild.de/fotos-skaliert/hilfe-was-ist-das-denn-fuer-ein-look-so-meldet-sich-borat-zurueck-man-will-eigentlich-nicht-aber-irgen-201542907-73216364/6,w=993,q=high,c=0.bild.jpg">
-                        einfach zeitlos</a>. 
-                    </p>
-                    <h5>Cocktail Night <span class="time">7PM - 12AM</span></h5>
-                    <p>
-                        <strong>Western attire</strong>
-                        <br>
-                        A semi-formal look that is contemporary & fashionable which is not too prim & proper is the best
-                        to pull off this night. You can see some pins for
-                        <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-women/">ladies</a>
-                        & <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-men/">gents</a>.
-                    </p>
-                    <h5>Wedding <span class="time">6PM-12AM</span></h5>
-                    <p>
-                        <strong>Indo-western</strong>
-                        <br>
-                        Ladies can flaunt their unconventional sarees,
-                        <a href="https://www.pinterest.com/ramswarooppatra/indo-western-lehengas/">lehengas</a>,
-                        <a href="https://www.pinterest.com/ramswarooppatra/indo-western-anarkalis/">anarkalis</a>,
-                        dresses and the list
-                        goes on whereas gentlemen can wear any kind of suit or just blazer. If you don't like to wear a
-                        suit/blazer, you can do a <a
-                            href="https://www.pinterest.com/ramswarooppatra/high-neck-jackets-for-men/">high-neck
-                        (band gala) waistcoat & shirt</a> combo.
+                        Für Frauen
+                        <a href="https://sep.yimg.com/ca/I/brandsonsale-store_2271_3078434936">bietet sich ein klassisch schickes Outfit an</a>.
+						<br>
+                        Und Herren
+                        <a href="https://i.imgflip.com/66peqh.jpg">
+                        können sich hieran orientieren</a>. 
                     </p>
                 </div>
             </div><!-- /.modal-content -->
@@ -168,11 +119,104 @@
     </div><!-- /.modal -->
 </section>
 
+<section id="map" class="section-padding">
+    <div class="text-center">
+        <h3>Locations</h3>
+    </div>
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-10 col-md-offset-4 col-md-6">
+                <div id="map-content" class="pointer-events-auto">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5>Kath. Kirchengemeinde St. Paulus Hervest</h5>
+                            <p>Josefstraße 1A, 46284 Dorsten</p>
+							<h5>Schwarzkaue Eventlocation</h5>
+							<p>Zeche Schlägel und Eisen 
+							<br> Glückauf-Ring 35, 45699 Herten</p>
+                        </div>
+                        <div class="col-md-6">
+                            <h5>Taxi Albers e.K. (Dorsten)</h5>
+                            <p><i class="fa fa-mobile"></i> <a href="tel://+4923623061">+49 2362 3061</a></p>
+							<br>
+							<h5>Taxi Selm (Herten)</h5>
+                            <p><i class="fa fa-mobile"></i> <a href="tel://+4920935666">+49 209 35666</a></p>
+                        </div>
+                    </div>
+                </div>
+    </div>
+</section>
+
+<section class="events section-padding" id="rsvp">
+
+    <div id="rsvp-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
+                    </button>
+                    <div class="section-padding">
+                        <h3>Thank you!</h3>
+                        <p>We are glad to see you join us on our big day.</p>
+                        <div id="add-to-cal"></div>
+                    </div>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-4">
+                <h3>Worauf wartest Du noch?</h3>
+                <p>Wir freuen uns auf Deine Zusage und nehmen über den folgenden Link auch ungerne Absagen entgegen. Um uns die Planung zu erleichtern, bitten wir um Rückmeldung bis zum 31.03.2022.</p>
+                <form id="rsvp-form" class="rsvp-form"
+                      action=""
+                      method="POST">
+                    <a class="btn btn-fill btn-small"
+                               href="https://pookpash.shinyapps.io/wedding/"></i>&nbsp;&nbsp;Hier klicken, um zuzusagen.</a>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="trauzeugen" class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3>Kontakt Trauzeugen</h3>
+                <p>Wenn Du unseren Tag mitgestalten möchtest, melde Dich doch gerne bei unseren Trauzeugen:
+				<br>Markus: <i class="fa fa-mobile"></i> <a href="tel://+4915755172555">+49 15755172555</a>
+				<br>Nils: <i class="fa fa-mobile"></i> <a href="tel://+4901714746679">+49 01714746679</a>
+				</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="ges" class="events section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3>Kommt die Frage nach Geschenken,</h3>
+                <p>so bitten wir Euch zu bedenken, 
+				<br>dass wir in unsern' jungen Jahren 
+				<br>noch nicht viel Zeit hatten zu sparen. 
+				<br>Es würde uns am liebsten sein, 
+				<br>käme was in unsern Sparstrumpf rein.
+				<br>
+				<br>Wir möchten es u.a. für einen neuen Esstisch mit Stühlen, sowie unsere Hochzeitsreise verwenden.
+				</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section id="eng-pics" class="section-padding">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Bilder der standesamtlichen Hochzeit</h3>
+                <h3 class="header">Bilder unserer standesamtlichen Hochzeit</h3>
             </div>
         </div>
         <div class="row">
@@ -253,98 +297,12 @@
     </div>-->
 </section>
 
-<section id="video-bg" class="hidden-md hidden-md">
-    <div id="bgndVideo" class="player"
-         data-property="{videoURL:'https://youtu.be/VaSgZE103NA',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, opacity:99}">
-    </div>
-    <div id="video-content">
-        <h5>Schwarzkaue Herten</h5>
-        <p>Wir rocken das!</p>
-    </div>
-</section>
-
-<section id="map" class="section-padding">
-    <div class="text-center">
-        <h3>Wie komme ich dahin?</h3>
-        <p>Viel leichter als du glaubst!</p>
-    </div>
-    <div id="map-canvas"></div>
-    <div id="map-content-wrapper" class="container pointer-events-none">
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-6">
-                <div class="text-center">
-                    <div id="btn-show-content" class="toggle-map-content pointer-events-auto">
-                        <i class="fa fa-info-circle"></i>&nbsp;&nbsp; Show info
-                    </div>
-                </div>
-                <div id="map-content" class="pointer-events-auto">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h5>Kath. Kirchengemeinde St. Paulus Hervest</h5>
-                            <p>Josefstraße 1A, 46284 Dorsten, Deutschland</p>
-                        </div>
-                        <div class="col-md-6">
-                            <h5>Taxi Albers e.K.</h5>
-                            <p><i class="fa fa-mobile"></i> <a href="tel://+4923623061">+49 2362 3061</a></p>
-                        </div>
-                    </div>
-                    <div class="row text-center">
-                        <div class="col-md-6" style="padding: 5px;">
-                            <a class="btn btn-fill btn-small"
-                               href="https://m.uber.com/ul/?action=setPickup&client_id=Yh7Dl6SjB56RY2JuuZF8ttVa6ryFV78W&pickup=my_location&dropoff[formatted_address]=Fortune%20Park%20Panchwati%20-%20Hotels%20in%20Kolkata%2C%20Howrah%2C%20West%20Bengal%2C%20India&dropoff[latitude]=22.593276&dropoff[longitude]=88.270277"><i
-                                    class="fa fa-taxi"></i>&nbsp;&nbsp;Taxi zu teuer? Dann Uber!</a>
-                        </div>
-                        <div class="col-md-6" style="padding: 5px;">
-                            <a class="btn btn-accent btn-small" id="btn-show-map"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Zeig Karte!</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="rsvp text-center" id="rsvp">
-
-    <div id="rsvp-modal" class="modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
-                    </button>
-                    <div class="section-padding">
-                        <h3>Thank you!</h3>
-                        <p>We are glad to see you join us on our big day.</p>
-                        <div id="add-to-cal"></div>
-                    </div>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <h3>Worauf wartet Ihr noch?</h3>
-                <p>Wir würden uns über eure Reservierung bis zum Xx.XX.2020 sehr freuen!</p>
-                <form id="rsvp-form" class="rsvp-form"
-                      action=""
-                      method="POST">
-                    <a class="btn btn-fill btn-small"
-                               href="https://pookpash.shinyapps.io/wedding/"><i
-                                    class="fa fa-taxi"></i>&nbsp;&nbsp;Hier klicken um zum Reservierungsformular zu kommen</a>
-                </form>
-            </div>
-        </div>
-    </div>
-</section>
-
 <footer>
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Kreiert mit gans viel Liebe von Till <span class="fa fa-heart pulse2"></span> für Maria!</p>
+                <p>Kreiert mit ganz viel Liebe von Maria und Till <span class="fa fa-heart pulse2"></span></p>
             </div>
         </div>
     </div>
